--- a/typeahead/index.html
+++ b/typeahead/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="brandon strellis" content="typeahead">
     <title>Typeahead</title>
+    <link href="reset.css" rel="stylesheet" type="text/css" />
     <link href="styles.css" rel="stylesheet" type="text/css" />
   </head>
 
@@ -12,9 +13,9 @@
 
     <input type=”text”
            placeholder="Choose a state"
-           class="input"
-           onkeyup="checkIfStatesMatch()"/>
-    <ul class="states-list">states list</ul>
+           class="input" />
+
+    <ul class="states-list"></ul>
 
     <script src="main.js"></script>
   </body>
